# deen-playground

./: README.md  compose.yaml
backend/: Cargo.toml  Dockerfile
backend/compiler/: Dockerfile  README.md  source.dn
backend/compiler/stdlib/: bytes.dn  fs.dn  io.dn  math.dn  string.c  string.dn
backend/src/: main.rs  runner.rs  server.rs
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
